# final-project-repo-team-5

./: .gitignore  README.md  pyproject.toml
our_pre_preparation/public perception of ai/: R_Studio_Coding.R
scripts/: coding_1010.py  coding_1010_2.py  hanningzhou.py
slides/: Presentation #1.pptx
src/tweets_about_ai/: mymodule.py
zhn_project preparation/: Presentation #2 for Team 5 (1).pptx  Presentation #3 for Team 5.pptx  bluesky_hist.py  final_pre_zhn.ipynb  final_pre_zhn_trymore.ipynb  zhn_preparation_code.ipynb
zhn_project preparation/public perception of ai/: twitter_dataset.csv
zhn_project preparation/public perception of ai/archive/archive/: robot-ai-all-public.csv.xlsx
