[project]
name = "tweets-about-ai"
version = "0.0.1"
description = "tis is the final project repository about tweets that talk about ai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
